--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,12 +39,38 @@ jobs:
       - name: Install pkg
         run: npm install -g pkg
 
-      - name: Package server with pkg
+      - name: Package for Linux
+        if: matrix.os == 'ubuntu-latest'
         run: |
-          pkg .output/server/index.mjs --targets node18-${{ matrix.pkg-platform }}-x64 --output build/output-${{ matrix.pkg-platform }}
+          pkg .output/server/index.mjs --targets node18-linux-x64 --output build/output-linux
 
-      - name: Upload artifacts
+      - name: Package for macOS
+        if: matrix.os == 'macos-latest'
+        run: |
+          pkg .output/server/index.mjs --targets node18-macos-x64 --output build/output-macos
+
+      - name: Package for Windows
+        if: matrix.os == 'windows-latest'
+        run: |
+          pkg .output/server/index.mjs --targets node18-win-x64 --output build/output-windows
+
+      - name: Upload artifacts for Linux
+        if: matrix.os == 'ubuntu-latest'
         uses: actions/upload-artifact@v3
         with:
-          name: build-${{ matrix.os }}
-          path: build/output-${{ matrix.os }}
+          name: build-linux
+          path: build/output-linux
+
+      - name: Upload artifacts for macOS
+        if: matrix.os == 'macos-latest'
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-macos
+          path: build/output-macos
+
+      - name: Upload artifacts for Windows
+        if: matrix.os == 'windows-latest'
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-windows
+          path: build/output-windows
