--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: Package for Windows
         run: |
-          pkg .output/server/index.mjs --targets node18-win-x64 --output build/output-windows
+          bun build ./.output/server/index.mjs --target=bun-windows-x64 --compile --outfile ./build/output-windows
 
       - name: Upload artifacts for Linux (x64)
         uses: actions/upload-artifact@v3
