--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
         node-version: [18.x]
     
     steps:
@@ -31,55 +31,41 @@ jobs:
 
       - name: Nitro build
         run: pnpm run build
-      
-      - name: Install bun
-        run: npm install -g bun
 
-      - name: Package for Linux (x64)
-        run: |
-          bun build ./.output/server/index.mjs --target=bun-linux-x64 --compile --outfile ./build/output-linux-x64
-      
-      - name: Package for Linux (arm64)
-        run: |
-          bun build ./.output/server/index.mjs --target=bun-linux-arm64 --compile --outfile ./build/output-linux-arm64
+      - name: Install pkg
+        run: npm install -g pkg
 
-      - name: Package for macOS (arm64)
+      - name: Package for Linux
+        if: matrix.os == 'ubuntu-latest'
         run: |
-          bun build ./.output/server/index.mjs --target=bun-darwin-arm64 --compile --outfile ./build/output-macos-arm64
+          bun build ./.output/server/index.mjs --target=bun-linux-x64 --compile --outfile /build/output-linux
 
-      - name: Package for macOS (Intel)
+      - name: Package for macOS
+        if: matrix.os == 'macos-latest'
         run: |
-          bun build ./.output/server/index.mjs --target=bun-darwin-x64 --compile --outfile ./build/output-macos-x64
+          bun build ./.output/server/index.mjs --target=bun-darwin-x64 --compile --outfile /build/output-macos
 
       - name: Package for Windows
+        if: matrix.os == 'windows-latest'
         run: |
-          bun build ./.output/server/index.mjs --target=bun-windows-x64 --compile --outfile ./build/output-windows
+          bun build ./.output/server/index.mjs --target=bun-windows-x64 --compile --outfile /build/output-windows
 
-      - name: Upload artifacts for Linux (x64)
+      - name: Upload artifacts for Linux
+        if: matrix.os == 'ubuntu-latest'
         uses: actions/upload-artifact@v3
         with:
-          name: build-linux-x64
-          path: ./build/output-linux-x64
+          name: build-linux
+          path: build/output-linux
 
-      - name: Upload artifacts for Linux (arm64)
+      - name: Upload artifacts for macOS
+        if: matrix.os == 'macos-latest'
         uses: actions/upload-artifact@v3
         with:
-          name: build-linux-x64
-          path: ./build/output-linux-arm64
-
-      - name: Upload artifacts for macOS (arm64)
-        uses: actions/upload-artifact@v3
-        with:
-          name: build-macos-arm64
-          path: build/output-macos-arm64
-
-      - name: Upload artifacts for macOS (x64)
-        uses: actions/upload-artifact@v3
-        with:
-          name: build-macos-x64
-          path: build/output-macos-x64
+          name: build-macos
+          path: build/output-macos
 
       - name: Upload artifacts for Windows
+        if: matrix.os == 'windows-latest'
         uses: actions/upload-artifact@v3
         with:
           name: build-windows
