--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,35 +38,35 @@ jobs:
       - name: Package for Linux
         if: matrix.os == 'ubuntu-latest'
         run: |
-          bun build ./.output/server/index.mjs --target=bun-linux-x64 --compile --outfile /build/output-linux
+          bun build ./.output/server/index.mjs --target=bun-linux-x64 --compile --outfile ./build/output-linux
 
       - name: Package for macOS
         if: matrix.os == 'macos-latest'
         run: |
-          bun build ./.output/server/index.mjs --target=bun-darwin-x64 --compile --outfile /build/output-macos
+          bun build ./.output/server/index.mjs --target=bun-darwin-x64 --compile --outfile ./build/output-macos
 
       - name: Package for Windows
         if: matrix.os == 'windows-latest'
         run: |
-          bun build ./.output/server/index.mjs --target=bun-windows-x64 --compile --outfile /build/output-windows
+          bun build ./.output/server/index.mjs --target=bun-windows-x64 --compile --outfile ./build/output-windows
 
       - name: Upload artifacts for Linux
         if: matrix.os == 'ubuntu-latest'
         uses: actions/upload-artifact@v3
         with:
           name: build-linux
-          path: build/output-linux
+          path: ./build/output-linux
 
       - name: Upload artifacts for macOS
         if: matrix.os == 'macos-latest'
         uses: actions/upload-artifact@v3
         with:
           name: build-macos
-          path: build/output-macos
+          path: ./build/output-macos
 
       - name: Upload artifacts for Windows
         if: matrix.os == 'windows-latest'
         uses: actions/upload-artifact@v3
         with:
           name: build-windows
-          path: build/output-windows
+          path: ./build/output-windows
