--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,27 +38,27 @@ jobs:
       - name: Package for Linux (x64)
         if: matrix.os == 'ubuntu-latest'
         run: |
-          bun build ./.output/server/index.mjs --target=bun-linux-x64 --compile --minify --sourcemap --outfile ./build/output-linux-x64
+          bun build ./.output/server/index.mjs --target=bun-linux-x64 --compile --minify --outfile ./build/output-linux-x64
           
       - name: Package for Linux (arm64)
         if: matrix.os == 'ubuntu-latest'
         run: |
-          bun build ./.output/server/index.mjs --target=bun-linux-arm64 --compile --minify --sourcemap --outfile ./build/output-linux-arm64
+          bun build ./.output/server/index.mjs --target=bun-linux-arm64 --compile --minify --outfile ./build/output-linux-arm64
 
       - name: Package for macOS (Intel)
         if: matrix.os == 'macos-latest'
         run: |
-          bun build ./.output/server/index.mjs --target=bun-darwin-x64 --compile --minify --sourcemap --outfile ./build/output-macos-x64
+          bun build ./.output/server/index.mjs --target=bun-darwin-x64 --compile --minify --outfile ./build/output-macos-x64
 
       - name: Package for macOS (arm64)
         if: matrix.os == 'macos-latest'
         run: |
-          bun build ./.output/server/index.mjs --target=bun-darwin-arm64 --compile --minify --sourcemap --outfile ./build/output-macos-arm64
+          bun build ./.output/server/index.mjs --target=bun-darwin-arm64 --compile --minify --outfile ./build/output-macos-arm64
 
       - name: Package for Windows
         if: matrix.os == 'windows-latest'
         run: |
-          bun build ./.output/server/index.mjs --target=bun-windows-x64 --compile --minify --sourcemap --outfile ./build/output-windows
+          bun build ./.output/server/index.mjs --target=bun-windows-x64 --compile --minify --outfile ./build/output-windows
 
       - name: Upload artifacts for Linux (x64)
         if: matrix.os == 'ubuntu-latest'
